--- a/src/main/webapp/views/assets/css/frontpageCreches.css
+++ b/src/main/webapp/views/assets/css/frontpageCreches.css
@@ -186,7 +186,7 @@ html, body
 	left: 100px;
 	bottom: 65px;
 	overflow-y: auto;
-	margin: 2%;
+	margin: 2% 0 2% 2%;
 	-webkit-overflow-scrolling: touch;
 }
 
