--- a/src/main/webapp/views/assets/css/mapaCreches.css
+++ b/src/main/webapp/views/assets/css/mapaCreches.css
@@ -23,7 +23,6 @@
 	width: 100%;
 	float: left;
 	padding: 0;
-	margin-left: 4px;
 }
 
 .fiscalizacao-fotos li {
@@ -31,7 +30,8 @@
 	float: left;
 	display: block;
 	text-align: center;
-
+	width: 11.11%;
+	padding: 0 2px;
 }
 
 
@@ -39,14 +39,13 @@
 
 .galeria-fotos {
     width: 100%;
-    float: left;
-    padding-left: 10%;
-    padding-right: 10%; 
+    float: 100%;
+    padding-left: 20%;
+    padding-right: 20%; 
 }
 
 .foto-galeria {
   	width: 100%;
-  	height: 500px;
   	overflow: hidden;
   	position: relative;
   	margin: 2% 0;
@@ -83,10 +82,6 @@
 
 .boxes
 {
-	/* border: 5px solid #FFF !important; */
-/* 	webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
--moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5); */
 	position: relative;
 	margin-right: 3px;
 	margin-bottom: 1px;
@@ -96,16 +91,14 @@ box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5); */
 
 .boxes
 {
-	width: 45px;
-	height: 45px;
 	border: none !important;
 }
 
 
 .boxes img
 {
-	width: 150px;
-	height: 150px;
+	width: 100%;
+	height: 100%;
 }
 
 .popover-avalie
@@ -440,14 +433,15 @@ input.pesquisa-input
     color: #46BFBD;
 }
 
-.accordion-toggle td
+.titulo-modulo
 {
-	width: 33%;
+	width: 45%;
 }
 
 .nota-modulo
 {
-	text-align: center;
+	width: 10%;
+	text-align: left;
 }
 
 .listaCreches
@@ -974,6 +968,31 @@ input.pesquisa-input
 	bottom: 10px !important;
 }
 
+@media screen and (max-width: 1024px){
+	
+	.nota-modulo
+	{
+		width: 20%;
+		text-align: left;
+	}
+
+	.titulo-modulo
+	{
+		min-width: 45%;
+	}
+	
+	.expand-icon
+	{
+		width: 1%;
+	}
+	
+	.galeria-fotos {
+	    width: 100%;
+	    float: 100%;
+	    padding-left: 10%;
+	    padding-right: 10%; 
+	}
+}
 
 @media screen and (max-width: 640px){
 
@@ -983,7 +1002,4 @@ input.pesquisa-input
 		height: 260px;
 		margin-top: -130px; /* metade da altura */
 	}
-
-	.foto-galeria {height: 260px;}
-
 }
