--- a/src/main/webapp/views/assets/css/ranking.css
+++ b/src/main/webapp/views/assets/css/ranking.css
@@ -16,10 +16,12 @@
 .ranking-table {
 	font-family:Arial, Helvetica, sans-serif;
 	color:#666;
+	width: 50%;
 	font-size:12px;
 	text-shadow: 1px 1px 0px #fff;
 	background:#eaebec;
-	margin:20px;
+	margin-left: 3%;
+	margin-top: 5px;
 	border:#ccc 1px solid;
 
 	-moz-border-radius:3px;
@@ -94,4 +96,16 @@
 	background: #f2f2f2;
 	background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#f0f0f0));
 	background: -moz-linear-gradient(top,  #f2f2f2,  #f0f0f0);	
+}
+
+.title-nota
+{
+	text-align: center;
+}
+
+.ranking-filtro
+{
+	width: 50%;
+	margin-left: 3%;
+	margin-bottom: 0;
 }
