Melhoria nos filtros

--- a/src/main/webapp/views/assets/css/frontpageCreches.css
+++ b/src/main/webapp/views/assets/css/frontpageCreches.css
@@ -233,7 +233,7 @@ html, body
  	width: 80%;
 
 }
-.detalhe-ranking .cabecalho
+.detalhe-ranking .cabecalho, .detalhe-video .cabecalho
 {
 	margin: 3%;
 }
