--- a/src/main/webapp/views/assets/css/mapaCreches.css
+++ b/src/main/webapp/views/assets/css/mapaCreches.css
@@ -86,15 +86,26 @@
 	margin-bottom: 1px;
 	display: inline-block;
 	overflow: hidden;
-}
-
-.boxes
-{
 	border: none !important;
 }
 
-
 .boxes img
+{
+	width: 100%;
+	max-height: 80px;
+}
+
+.boxes-compare
+{
+	position: relative;
+	margin-right: 3px;
+	margin-bottom: 1px;
+	display: inline-block;
+	overflow: hidden;
+	border: none !important;
+}
+
+.boxes-compare img
 {
 	width: 100%;
 	height: 100%;
@@ -1038,4 +1049,15 @@ td.comp-modulo {
 		height: 260px;
 		margin-top: -130px; /* metade da altura */
 	}
+}
+
+.red-mark
+{
+	color: red !important;
+}
+
+label[for="filtro-4"], label[for="filtro-5"], label[for="filtro-6"], label[for="filtro-7"], label[for="filtro-8"], label[for="filtro-10"], label[for="filtro-11"]
+{
+	cursor: no-drop !important;
+	color: #ccc;
 }
