--- a/src/main/webapp/views/assets/css/frontpage.css
+++ b/src/main/webapp/views/assets/css/frontpage.css
@@ -1113,12 +1113,12 @@ li.box-numeros:hover
 }
 
 .helper {
-	display: none;
-	width: 30px;
-	height: 30px;
-	background: #2b6799;
-	bottom: 85px;
-	right: 20px;
+	display: block;
+	width: 50px;
+	height: 50px;
+	background: #D44545;
+	bottom: 95px;
+	right: 30px;
 	position: absolute;
 	border-radius: 90px;
 	text-align: center;
@@ -1127,10 +1127,14 @@ li.box-numeros:hover
 	font-size: 22px;
 	cursor: default;
 	transition-property: width;
-	transition-duration: .4s;
+	transition-duration: .3s;
+}
+
+.helper img {
+	width: 30px;
 }
 
 .helper:hover {
 	cursor: pointer;
-	width: 110px;
+	width: 200px;
 }
