--- a/src/main/webapp/views/assets/css/mapa.css
+++ b/src/main/webapp/views/assets/css/mapa.css
@@ -546,7 +546,6 @@ input.pesquisa-input
 .fiscalizacao-questionario li span {
 	width: 60%;
 	float: left;
-	padding-right: 5%;
 }
 .fiscalizacao-questionario li span.questao-info {
     float: right;
@@ -1114,4 +1113,19 @@ input.pesquisa-input
 
 #sending {
 	display: none;
+}
+
+#anvisa-info {
+	cursor: pointer;
+	color: #0000EE;
+}
+
+.red-mark
+{
+	color: red !important;
+}
+
+.grey-mark
+{
+	color: #565656 !important;
 }
