--- a/src/main/webapp/views/assets/css/frontpage.css
+++ b/src/main/webapp/views/assets/css/frontpage.css
@@ -787,6 +787,46 @@ li.box-numeros:hover
 	transform: rotate(45deg);
 }
 
+.filtro-grupos + label
+{
+	display: block;
+	position: relative;
+	padding-left: 35px;
+	margin-bottom: 20px;
+	font: 14px/20px 'Open Sans', Arial, sans-serif;
+	cursor: pointer;
+	float: left;
+}
+
+.filtro-grupos
+{
+	display: none !important;
+}
+
+.filtro-grupos + label:before
+{
+	content: '';
+	display: block;
+	position: absolute;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 10px 0 10px 17.3px;
+	border-color: transparent transparent transparent #6cc1e5;
+	left: 1px;
+	top: 0;
+	opacity: .6;
+	-webkit-transition: all .12s, border-color .08s;
+	transition: all .12s, border-color .08s;
+}
+
+.filtro-grupos:checked + label:before
+{
+	-webkit-transform: rotate(90deg);
+	transform: rotate(90deg);
+}
+
+
 /* FIM CHECKBOXES */
 
 
