--- a/src/main/webapp/views/assets/css/frontpageCreches.css
+++ b/src/main/webapp/views/assets/css/frontpageCreches.css
@@ -731,9 +731,9 @@ li.box-numeros:hover
 	width: 0;
 	height: 0;
 	border-style: solid;
-	border-width: 17.3px 10px 0 10px;
-	border-color: #6cc1e5 transparent transparent transparent;
-	left: 0;
+	border-width: 10px 0 10px 17.3px;
+	border-color: transparent transparent transparent #6cc1e5;
+	left: 1px;
 	top: 0;
 	opacity: .6;
 	-webkit-transition: all .12s, border-color .08s;
@@ -742,8 +742,8 @@ li.box-numeros:hover
 
 .filtro-grupos:checked + label:before
 {
-	-webkit-transform: rotate(-180deg);
-	transform: rotate(-180deg);
+	-webkit-transform: rotate(90deg);
+	transform: rotate(90deg);
 }
 
 .grupos-escolares + label
