--- a/src/main/webapp/views/assets/css/frontpage.css
+++ b/src/main/webapp/views/assets/css/frontpage.css
@@ -127,6 +127,53 @@ html, body
 	opacity: 1;
 }
 
+.menu-ui {
+	background: #fff;
+	position: absolute;
+	bottom: 0;
+	margin-bottom: 85px;
+	right: 50px;
+	z-index: 1;
+	border-radius: 3px;
+	width: 120px;
+	border: 1px solid rgba(0, 0, 0, 0.4);
+}
+
+.menu-ui a {
+	font-size: 13px;
+	color: #000;
+	display: block;
+	margin: 0;
+	padding: 0;
+	padding: 10px;
+	text-decoration: none;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+	text-align: center;
+}
+
+.menu-ui a:first-child {
+	border-radius: 3px 3px 0 0;
+}
+
+.menu-ui a:last-child {
+	border: none;
+	border-radius: 0 0 3px 3px;
+}
+
+.menu-ui a:hover {
+	background: #f8f8f8;
+	color: #404040;
+}
+
+.menu-ui a.active {
+	background: #333;
+	color: #FFF;
+}
+
+.menu-ui a.active:hover {
+	background: #ccc;
+}
+
 /* .painel
 {
 	opacity: 0.95;
