--- a/src/main/webapp/views/assets/css/mapa.css
+++ b/src/main/webapp/views/assets/css/mapa.css
@@ -22,14 +22,15 @@
 {
 	width: 100%;
 	float: left;
+	height: 50px;
 	padding: 0;
-	margin-left: 4px;
 }
 
 .fiscalizacao-fotos li {
 	list-style: none;
 	float: left;
 	display: block;
+	width: 11.11%;
 	text-align: center;
 
 }
@@ -68,23 +69,21 @@ box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5); */
 
 .boxes
 {
-	width: 45px;
 	height: 45px;
 	border: none !important;
 }
 
 .big-box
 {
-	width: 98%;
+	width: 100%;
 	height: 300px;
 	margin-top: 40px;
-	margin-left: 4px;
 }
 
 .boxes img
 {
-	width: 150px;
-	height: 150px;
+	width: 98%;
+	height: 100%;
 }
 
 .avalie-fields
