--- a/src/main/webapp/views/assets/css/frontpage.css
+++ b/src/main/webapp/views/assets/css/frontpage.css
@@ -128,6 +128,10 @@ html, body
 	opacity: 1;
 }
 
+.leaflet-zoom-hide {
+	z-index: 201;
+}
+
 .layers-ui {
 	background: #337ab7;
 	position: absolute;
@@ -149,15 +153,20 @@ html, body
 
 .layers-options {
 	background: #fff;
-	position: absolute;
-	top: 85px;
-	right: 50px;
+	position: relative;
+	float: right;
+	top: -44px;
 	z-index: 1;
 	border-radius: 7px;
 	border: 2px solid #337ab7;
-	width: 100px;
+	width: 150px;
 	height: 150px;
 	display: none;
+}
+
+.layers-options a {
+	float: left;
+	width: 100%;
 }
 
 /*.menu-ui a {
