Alteração nas legendas para o mapa de calor

--- a/src/main/webapp/views/assets/css/frontpage.css
+++ b/src/main/webapp/views/assets/css/frontpage.css
@@ -132,6 +132,13 @@ html, body
 	z-index: 201;
 }
 
+.layer-info {
+	position: absolute;
+	bottom: 85px;
+	right: 50px;
+	z-index: 1;
+}
+
 .layers-ui {
 	background: #337ab7;
 	position: absolute;
