--- a/src/main/webapp/views/assets/css/frontpage.css
+++ b/src/main/webapp/views/assets/css/frontpage.css
@@ -17,7 +17,7 @@ body nav ul
 
 html, body
 {
-	font-family: arial,sans-serif;
+	font-family: Montserrat,sans-serif;
 	height: 100%;
 }
 
@@ -306,13 +306,15 @@ html, body
 	position: absolute;
 	top: 0;
 	right: 0px;
-	bottom: 0;
+	bottom: 40px;
 	width: 0%;
 	max-width: 600px;
 	background: #3b4141;
 	z-index: 2;
 	-webkit-transform: translateZ(0);
 	color: #fff;
+	overflow: auto;
+	padding-bottom: 20px;
 }
 
 .detalhe-contato {
@@ -785,7 +787,7 @@ li.compare-item:hover {background: #E7F3F3;}
 
 .modal-footer {position: absolute;bottom: 0;right: 0;left: 0;} 
 
-footer
+.desktop-footer
 {
 	box-shadow: rgba(0,0,0,.1) 0 0 10px;
 	background: -moz-linear-gradient(top, #fff, #cdcdcd) repeat-X;
@@ -798,12 +800,6 @@ footer
 	z-index: 9;
 	display: block;
 	opacity: 0.8;
-}
-
-.footer-filtros
-{
-	float: left;
-	position: fixed;
 }
 
 .filtro-rpa
@@ -852,7 +848,7 @@ li.fa-li:hover {background: #E7F3F3}
 	padding: 0 3px 0;
 }
 
-.legenda
+.legenda, .mobile-legenda
 {
 	float: right;
 	height: 65px;
@@ -1291,47 +1287,101 @@ li.box-numeros:hover
 }
 
 /* MENU MOBILE */
-#mobile-menu, #home-mob
+.mobile-menu
+{
+	display: none;
+	justify-content: space-between;
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	top: 0;
+	padding: 25px 20px;
+	background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.7), rgba(255,255,255,0.6), rgba(255,255,255,0.4), rgba(255,255,255,0));
+}
+
+.menu-burger img, .menu-filter img
+{
+	height: 18px;
+}
+
+.mobile-logo
+{
+	margin: auto;
+	text-align: center;
+}
+
+.mobile-logo-title
+{
+	color: #35343d;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 15px;
+	font-style: normal;
+	font-stretch: normal;
+	font-weight: 600;
+	line-height: 15px;
+	text-transform: none;
+	text-decoration: none;
+	letter-spacing: 0px;
+}
+
+.mobile-logo-img
+{
+	width: 30px;
+}
+
+.menu-mobile-options
 {
 	display: none;
 }
 
-#mobile-menu.navbar-default .navbar-brand {
-    color: rgba(119, 119, 119, 1);
+.mobile-footer
+{
+	display: none;
+	justify-content: space-between;
+	box-shadow: rgba(0,0,0,.1) 0 0 10px;
+	background: #fff;
+	height: 65px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	z-index: 9;
 }
-#mobile-menu.navbar-default {
-    font-size: 16px;
-    background-color: rgba(36, 36, 41, 1);
-    border-bottom-width: 1px;
+
+.footer-globe:after, .footer-list:after
+{
+	
+    content: "";
+    position: relative;
+    top: -3px;
+    left: calc(33% + 20px);
+    border-right: 1px solid #bebebe;
 }
-#mobile-menu.navbar-default .navbar-nav>li>a {
-    color: rgba(119, 119, 119, 1);
-    background-color: rgba(36, 36, 41, 1);
+
+.footer-globe, .footer-list
+{
+	color: #bebebe;
+	text-align: center;
+	width: 33%;
 }
-#mobile-menu.navbar-default .navbar-nav>li>a:hover,
-#mobile-menu.navbar-default .navbar-nav>li>a:focus {
-    color: rgba(51, 51, 51, 1);
-    background-color: rgba(248, 248, 248, 1);
+
+.footer-globe i, .footer-list i
+{
+	font-size: 23px;
 }
-#mobile-menu.navbar-default .navbar-nav>.active>a,
-#mobile-menu.navbar-default .navbar-nav>.active>a:hover,
-#mobile-menu.navbar-default .navbar-nav>.active>a:focus {
-    color: rgba(85, 85, 85, 1);
-    background-color: rgba(231, 231, 231, 1);
+
+.footer-filtros
+{
+	float: left;
+	position: fixed;
 }
-#mobile-menu.navbar-default .navbar-toggle {
-    border-color: #ddd;
+
+.footer-menu-active {
+	color: #2b7093;
 }
-#mobile-menu.navbar-default .navbar-toggle:hover,
-#mobile-menu.navbar-default .navbar-toggle:focus {
-    background-color: #ddd;
-}
-#mobile-menu.navbar-default .navbar-toggle .icon-bar {
-    background-color: #888;
-}
-#mobile-menu.navbar-default .navbar-toggle:hover .icon-bar,
-#mobile-menu.navbar-default .navbar-toggle:focus .icon-bar {
-    background-color: #242429;
+
+.footer-menu-inactive {
+	color: #bebebe;
 }
 
 .helper {
@@ -1498,7 +1548,7 @@ tr.accordion-toggle {
 @media screen and (max-width: 1024px){
   	
 	.pesquisa-resultado h4.pesquisa-nome {
-		font-size: 10px !important;
+		font-size: 10px;
 	}
 
 	.pesquisa-resultado h4.pesquisa-endereco {
@@ -1541,12 +1591,16 @@ tr.accordion-toggle {
 		width: 100%;
 	}
 	
-	#mobile-menu, #fecha-escola, #fecha-compare, #fecha-resultado-compare, #home-mob {
+	#mobile-menu {
+		display: flex;
+	}
+	
+	#fecha-escola, #fecha-compare, #fecha-resultado-compare, #home-mob {
 		display: block;
 	}
 	
 	.painel{
-		top: 50px;
+		box-shadow: none;
 	}
 	
 	.redes-sociais, .footer-filtros, .copyright, .side-menu, #fecha-ideb, #fecha-compare-desk {
@@ -1563,29 +1617,56 @@ tr.accordion-toggle {
 		top: 60px;
 	}
 	
-	.detalhe, .dados-compare, .cabecalho-compare, .compare-resultado{
+	.detalhe, .dados-compare, .cabecalho-compare, .compare-resultado {
 		left: 0;
 	}
 	
-	.compare, .detalhe, .dados-compare{
+	.compare, .detalhe, .dados-compare {
 		bottom: 40px;
 	}
 	
-	.legenda span, .lista-legenda{
+	.legenda span, .lista-legenda {
 		padding: 10px 12px 0 0;
 	}
 	
-	.legenda, footer {
+	.mobile-legenda {
+		width: 33%;
+	}
+	
+	.mobile-lista-legenda {
+		float: right;
+		list-style: none;
+		display: inline-block;
+		padding: 10px;
+	}
+	
+	.legenda, .desktop-footer, .mobile-footer, .mobile-legenda {
 		height: 40px;
 	}
 	
-	footer{
+	.mobile-legenda {
+		width: 33%;
+	}
+	
+	.desktop-footer {
+		display: none;
+	}
+	
+	.mobile-footer {
+		display: flex;
+	}
+	
+	.desktop-footer, .mobile-footer {
 		position: fixed;
     	bottom: 0;
 	}
 	
 	#home-mob{
 		padding: 8px 8px 0;
+	}
+	
+	.footer-list, .footer-globe {
+		padding: 10px 20px;
 	}
 	
 	.layers-options, .layers-ui {
@@ -1616,10 +1697,55 @@ tr.accordion-toggle {
 	#mobile-menu.navbar-default {
     	font-size: 16px;
 	}
+	
+	.flip, .anos-radio, .layers-ui, .helper {
+    	display: none;
+	}
 
 	.pesquisa-escola-caixas, .compare-escola-caixas {
 		width: 100%;
 		padding: 4%;
+	}
+	
+	.painel-pesquisa	{
+	}
+	
+	.painel-pesquisa .cabecalho, .contato-topo	{
+		text-align: center;
+		margin: 25px 25px 0px 25px;
+	}
+	
+	.contato-topo {
+		text-align: center;
+	}
+	
+	.contato-topo h2 {
+		font-size: 15px;
+		text-transform: none;
+		padding: 0 0 14px 0;
+		color: white;
+	}
+	
+	.painel-pesquisa .cabecalho h2 {
+		font-size: 15px;
+		text-transform: none;
+		margin-top: 0;
+		margin-bottom: 20px;
+	}
+	
+	.pesquisa-nome {
+		margin-bottom: 10px;
+		font-size: 12px !important;
+	}
+	
+	.formato-titulo, .formato-opcoes {
+		text-align: left;
+	}
+	
+	.painel-close {
+		left: 25px;
+		right: 0;
+		top: 20px
 	}
 	
 	.modal-dialog,
