--- a/src/main/webapp/views/assets/css/frontpage.css
+++ b/src/main/webapp/views/assets/css/frontpage.css
@@ -19,6 +19,7 @@ html, body
 {
 	font-family: Montserrat,sans-serif;
 	height: 100%;
+	overflow: hidden;
 }
 
 .h4
@@ -27,9 +28,17 @@ html, body
 	line-height: 1em;
 }
 
+.map-container {
+	transform: scale(1);
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 0;
+	transition: all .3s ease-in-out;
+}
+
 #map
 {
-	transform: scale(1);
 	position: relative;
 	height: 100%;
 	width: 95%;
@@ -38,7 +47,6 @@ html, body
 	left: 0;
 	top: 0;
 	border-radius: 0;
-	transition: all .3s ease-in-out;
 }
 
 .side-menu
