--- a/src/main/webapp/views/assets/css/mobile.css
+++ b/src/main/webapp/views/assets/css/mobile.css
@@ -9,8 +9,18 @@
 	background: linear-gradient(45deg, #105099 0%,#7bb7e5 100%);
 }
 
-#map.menu-small {
-	transform: translateX(70vw) translateY(96px) scale(.7);
+.map-container.menu-small {
+	transform: translateX(70vw) translateY(15vh) scale(.7);
+    transform-origin: 0 0
+}
+
+.menu-map-small {
+	transform: translate(70vw, 96px);
+    transform-origin: 0 0
+}
+
+.footer-small {
+	transform: translate(70vw, -15vh);
     transform-origin: 0 0
 }
 
@@ -20,13 +30,18 @@
 	height: 65px;
 }
 
-.mobile-painel {
-	display: none;
+.mobile-filtro {
+	transform: translateY(-100%);
     position: absolute;
     height: 50%;
     z-index: 3;
     width: 100%;
     background-color: white;
+    transition: all .5s ease-in-out;
+}
+
+.mobile-filtro-show {
+	transform: translateY(0%);
 }
 
 .menu-save {
@@ -34,32 +49,51 @@
 }
 
 .mapShadow1 {
+	transform: scale(1);
     position: absolute;
     width: 100%;
-    height: 66%;
-    left: 67%;
-    top: 109px;
-    border-radius: 5px;
+    height: 100%;
+	left: 0;
+	top: 0;
     background-color: rgba(255,255,255,0.4);
+	transition: all .35s ease-in-out;
+}
+
+.mapShadow1.shadow1-show {
+    transform: translate(67vw, 17vh) scale(.66);
+    transform-origin: 0 0;
 }
 
 .mapShadow2 {
+	transform: scale(1);
     position: absolute;
     width: 100%;
-    height: 62%;
-    left: 64%;
-    top: 122px;
-    border-radius: 5px;
+    height: 100%;
+    left: 0;
+    top: 0;
     background-color: rgba(255,255,255,0.1);
+    transition: all .4s ease-in-out;
+}
+
+.mapShadow2.shadow2-show {
+    transform: translate(64vw, 19vh) scale(.62);
+    transform-origin: 0 0;
 }
 
 .mobile-blur {
-	display: none;
+	visibility: hidden;
+	opacity: 0;
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(55,55,55,0.6);
 	z-index: 2;
+    transition: visibility 0s, opacity 0.5s;
+}
+
+.mobile-blur-show {
+	visibility: visible;
+	opacity: 1;
 }
 
 .mobile-painel-menu {
@@ -85,6 +119,7 @@
 
 .mobile-menu-map {
 	background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.7), rgba(255,255,255,0.6), rgba(255,255,255,0.4), rgba(255,255,255,0));
+	transition: all .3s ease-in-out;
 }
 
 .menu-left img, .menu-right img
@@ -150,6 +185,7 @@
 	left: 0;
 	width: 100%;
 	z-index: 1;
+	transition: all .3s ease-in-out;
 }
 
 
