--- a/src/main/webapp/views/assets/css/fab-menu.css
+++ b/src/main/webapp/views/assets/css/fab-menu.css
@@ -30,13 +30,22 @@
 }
 
 #container-floating {
+	visibility: visible;
+	opacity: 1;
 	z-index: 1;
 	position: fixed;
 	width: 50px;
 	height: 50px;
 	bottom: 30px;
 	right: 30px;
+    transition: visibility 0.5s, opacity 0.5s;
 }
+
+#container-floating.container-floating-hide {
+	visibility: hidden;
+	opacity: 0;
+}
+
 
 #container-floating:hover {
 	height: 400px;
