--- a/src/main/webapp/views/assets/css/mobile.css
+++ b/src/main/webapp/views/assets/css/mobile.css
@@ -1,27 +1,66 @@
-.background-menu 
+@font-face {
+  font-family: 'Akrobat';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Akrobat Regular'), local('Akrobat-Regular'), url(fonts/Akrobat-Regular.otf) format('otf');
+  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+
+.mobile-side-menu
 {
-	display: none;
+	padding: 40px 15px;
+	opacity: 0;
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	top: 0;
 	left: 0;
-	background: linear-gradient(45deg, #105099 0%,#7bb7e5 100%);
+	color: white;
+	background: linear-gradient(45deg, #105099 0%, #81D0EF 100%);
+}
+
+.mobile-side-menu-content
+{
+	opacity: 0;
+	transition: all .5s ease-in-out;
+}
+
+.menu-content-show {
+	opacity: 1;
+	transform: translateX(10px);
+}
+
+.mobile-menu-logo {
+	border-radius: 5px;
+}
+
+.mobile-side-menu-group {
+	margin: 60px 0 0 10px;
+}
+
+.mobile-side-menu-title {
+	font-size: 22px;
+}
+
+.mobile-side-menu-lista {
+	margin-top: 30px;
+	list-style: none;
+	padding-inline-start: 0;
+}
+
+.mobile-side-menu-lista li {
+	margin-top: 15px;
+	font-size: 16px;
 }
 
 .map-container.menu-small {
 	transform: translateX(70vw) translateY(15vh) scale(.7);
-    transform-origin: 0 0
+    transform-origin: 0 0;
+	border-radius: 10px;
 }
 
-.menu-map-small {
-	transform: translate(70vw, 96px);
-    transform-origin: 0 0
-}
-
-.footer-small {
-	transform: translate(70vw, -15vh);
-    transform-origin: 0 0
+#map.map-small {
+	border-radius: 10px;
 }
 
 .mobile-legenda
@@ -33,7 +72,7 @@
 .mobile-filtro {
 	transform: translateY(-100%);
     position: absolute;
-    height: 50%;
+    height: 300px;
     z-index: 3;
     width: 100%;
     background-color: white;
@@ -55,6 +94,7 @@
     height: 100%;
 	left: 0;
 	top: 0;
+	border-radius: 10px;
     background-color: rgba(255,255,255,0.4);
 	transition: all .35s ease-in-out;
 }
@@ -71,6 +111,7 @@
     height: 100%;
     left: 0;
     top: 0;
+    border-radius: 10px;
     background-color: rgba(255,255,255,0.1);
     transition: all .4s ease-in-out;
 }
@@ -99,10 +140,24 @@
 .mobile-painel-menu {
 	display: flex;
 	justify-content: space-between;
-	position: absolute;
 	width: 100%;
 	top: 0;
 	padding: 25px 20px;
+}
+
+.mobile-painel-content {
+	padding: 0 20px;
+}
+
+.mobile-painel-content h4 {
+	color: #bebebe;
+	font-size: 15px;
+}
+
+.mobile-layers {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 25px;
 }
 
 /* MENU MOBILE */
@@ -114,12 +169,18 @@
 	z-index: 1;
 	width: 100%;
 	top: 0;
+	border-radius: 0;
 	padding: 25px 20px;
 }
 
 .mobile-menu-map {
 	background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.7), rgba(255,255,255,0.6), rgba(255,255,255,0.4), rgba(255,255,255,0));
 	transition: all .3s ease-in-out;
+	border-radius: 0;
+}
+
+.mobile-menu-map.mobile-menu-map-small {
+	border-radius: 10px 0 0 0;
 }
 
 .menu-left img, .menu-right img
@@ -170,6 +231,19 @@
 	display: none;
 }
 
+.footer-active-indicator {
+	position: absolute;
+	width: 33%;
+	height: 2px;
+	bottom: 38px;
+	background-color: #2b7093;
+	transform: translateX(33vw);
+	transition: all .5s ease-in-out;
+}
+
+.footer-active-indicator.list-indicator {
+	transform: translateX(0vw);
+}
 
 /* FOOTER MOBILE */
 
@@ -185,9 +259,14 @@
 	left: 0;
 	width: 100%;
 	z-index: 1;
+	border-radius: 0;
 	transition: all .3s ease-in-out;
 }
 
+.mobile-footer.mobile-footer-small
+{
+	border-radius: 0 0 0 10px;
+}
 
 .footer-globe:after, .footer-list:after
 {
@@ -394,6 +473,25 @@
 		padding: 4%;
 	}
 	
+	.painel-pesquisa {
+		transform: translateX(-100%);
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		width: 100%;
+		background: #fff;
+		z-index: 2;
+		transition: all .5s ease-in-out;
+	}
+	
+	.painel-pesquisa.pesquisa-show {
+		transform: translateX(0%);
+	}
+	
+	.painel-pesquisa.mobile-painel-close {
+		display: block;
+	}
+	
 	.painel-pesquisa .cabecalho, .contato-topo	{
 		text-align: center;
 		margin: 25px 25px 0px 25px;
@@ -427,6 +525,7 @@
 	}
 	
 	.painel-close {
+		display: none;
 		left: 25px;
 		right: 0;
 		top: 20px
@@ -444,5 +543,23 @@
 	.modal-lg
 	{
 		width: 100% !important;
+	}
+	
+	.layers-imgs {
+		display: flex;
+		justify-content: space-between;
+	}
+	
+	.layers-info {
+		margin-top: 0;
+		margin-left: 10px;
+	}
+	
+	.layers-bg a, .layers-info a {
+		font-size: 11px;
+	}
+	
+	.layers-bg div, .layers-info div {
+		width: 100%;
 	}
 }
